Added some comments and removed bottom part

--- a/Index.html
+++ b/Index.html
@@ -47,11 +47,14 @@
 			</table>
 		</td>
 	</tr>
+
+<!-- get the cta links and colors and put them in here, where the links and colors go -->
 	<tr>
 		<td  align="center" class="CTA">
 			<table width="80%" align="center" style="border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;">
-			 <tr>
+			 <tr>                                    <!-- color  -->
            <td style="text-align: center; background-color: #920202;">
+           <!-- link -->
              <a href="http://www.diablovalleyhomevalues.com/" style="color: white; text-decoration: none;">
                <p style="padding: 2em;">Get a FREE home value report</p>
              </a>
@@ -62,8 +65,9 @@
         </tr>
 
          <tr>
-           
+                                                          <!-- color  -->
            <td style="text-align: center; background-color: #320000;">
+           <!-- link -->
              <a href="http://www.searchsanramonvalleyhomes.com/" style="color: white; text-decoration: none;">
                <p style="padding: 2em;">Search All Homes on the MLS</p>
              </a>
@@ -107,12 +111,13 @@
           925-855-3432 | <a href="mailto:scott@thescottfullerteam.com">scott@thescottfullerteam.com</a></p>
    	</td>
    </tr>
+    <!-- IGNORE ME 
     <tr>
        <td bgcolor="#999" style="font-size: 0.6em; text-align: center;">
           <p style="line-height: 1; overflow: hidden; column: 1; padding-bottom: 0.8em; padding-top: 1em;">You subscribed to our newsletter through our website, by emailing us asking for extra information or sales materials, by subscribing to our news through a sister site, by attending one of our events, or perhaps just because you're a friend or connection of us. If you don't wish to receive these updates, please unsubscribe anytime, below:</p>
           <p><a href="#">Unsubscribe</a></p><br>
        </td>
-    </tr>
+    </tr> -->
 </table>
 </body>
 </html>
