--- a/Index.html
+++ b/Index.html
@@ -1,28 +1,44 @@
 <!doctype html>
 <html>
 <body bgcolor="#ccc" style="font-family: Arial; background-color: #f6f6f6;" width="100%">
+
+
 <!--Preheader goes here-->
-<p style="color: white; display: none;">Hey this is some awesome preheader text. Note how I don't show up in the email.</p>
+<p style="color: transparent; display: none;">This is suppose to be teaser text</p>
 <table style="width:100%; max-width: 630;" class="container" align="center" cellpadding="0" cellspacing="0">
 	<tr>
 		<td>
 			<table align="center">
 				<tr>
-<!--Email Header goes here. remember to fill out the alt text-->				
+
 					<td class="Logo" width="630px;">
+						
+               <!--Email Header goes here. remember to fill out the alt text-->				
 						<img alt="east bay real estate journal brought to you by the scott fuller team" src="http://i842.photobucket.com/albums/zz344/VyralMarketing/1-1-2013/fuller_email_zpse5924491.jpg" style="width: 100.963%; float: left;">		
 					</td>
 				</tr>
 			</table>
-			
 		</td>
 	</tr>
 </table>
 <table style="width:100%; max-width: 630px;" bgcolor="#fcfcfc" style="border: 2px solid #dddddd; line-height: 135%;" class="container" align="center" cellpadding="0" cellspacing="0">
 	<tr>
+		<td style="text-align: center;">
+		<!--Headline-->	
+			<h1 style="font-family: Arial, Helvetica, sans-serif; font-size: 1.6em; color: #404040; padding: 1em;" class="headline">Answering the Common Questions About Solar Panels</h1>
+		</td>
+
+	</tr>
+	<tr>
+	<td style="text-align: center;"><p style="padding-bottom: 1em;">Press Play to Watch</p></td>
+	</tr>
+	<tr>
 		<td bgcolor="#fcfcfc" colspan="3" align="center">
+
 <!-- Insert Video Thumbnail Here. remember to fill out the alt text -->
-			<img  alt="click here to play our video" src="http://i842.photobucket.com/albums/zz344/VyralMarketing/1-1-2013/unnamed_zps8231f227.jpg" style="max-width: 630px; width: 100%;">
+		<a href="#"><img  alt="click here to play our video" src="http://i842.photobucket.com/albums/zz344/VyralMarketing/1-1-2013/unnamed_zps8231f227.jpg" style="max-width: 630px; width: 100%;"></a>
+
+
 		</td>
 	</tr>
 	<tr>
@@ -33,14 +49,19 @@
 			<table>
 				<tr>
 					<td align="center" class="bodyCopy">
-<!--Headline-->
-						<h1 style="font-family: Arial, Helvetica, sans-serif; font-size: 1.6em; color: #404040;" class="headline">Answering the Common Questions About Solar Panels</h1>
+
+
+
+
 <!--Date and Location-->
 						<p style="font-family: Arial, Helvetica, sans-serif; font-weight: bold; color: #555555; font-size: 0.9em; padding: 0 3em;">09/17/2014 | Danville, CA-</p>
+
+
 <!--Preview Text-->						
-            <p style="font-family: Arial, Helvetica, sans-serif; color: #555555; padding: 0 3em;">  Are you trying to decide whether you should have solar panels installed? They supply up to 90% of your home's electricity if the conditions are right. But should you purchase them or lease them? Is your home even a good candidate for them? In today's blog, we answer those questions and more. If you want to learn all you need to know about solar panels:</p>
+            <p style="font-family: Arial, Helvetica, sans-serif; color: #555555; padding: 0 3em;">  Are you trying to decide whether you should have solar panels installed? They supply up to 90% of your home's electricity if the conditions are right. But should you purchase them or lease them? Is your home even a good candidate for them? In today's blog, we answer those questions and more. <a href="#">If you want to learn all you need to know about solar panels, watch this short video!</a></p>
+ 
  <!--video link where the # is -->             
-              <p style="padding: 1em;"><a href="#">watch this short video!</a></p>
+              <p style="padding: 1em;"><a href="#">Watch on Your Mobile Device</a></p>
 					</td>
 					<td class="spacer">&nbsp;</td>
 				</tr>
@@ -55,8 +76,8 @@
 			 <tr>                                    <!-- color  -->
            <td style="text-align: center; background-color: #920202;">
            <!-- link -->
-             <a href="http://www.diablovalleyhomevalues.com/" style="color: white; text-decoration: none;">
-               <p style="padding: 2em;">Get a FREE home value report</p>
+             <a href="http://www.diablovalleyhomevalues.com/" style="color: white; text-decoration: none !important;">
+               <p style="padding: 2em; font-size: 1.5em;">Get a FREE home value report</p>
              </a>
            </td>
         </tr>
@@ -68,8 +89,8 @@
                                                           <!-- color  -->
            <td style="text-align: center; background-color: #320000;">
            <!-- link -->
-             <a href="http://www.searchsanramonvalleyhomes.com/" style="color: white; text-decoration: none;">
-               <p style="padding: 2em;">Search All Homes on the MLS</p>
+             <a href="http://www.searchsanramonvalleyhomes.com/" style="color: white; text-decoration: none !important;">
+               <p style="padding: 2em; font-size: 1.5em;">Search All Homes on the MLS</p>
              </a>
            </td>
          </tr>
@@ -83,21 +104,28 @@
     <td width="80%">
 
 <!-- Socials-->
+
+<!--facebook-->
      <a href="https://www.facebook.com/" target="_blank" alt="Join us on Facebook" style="text-decoration: none;">
 			<img src="http://i842.photobucket.com/albums/zz344/VyralMarketing/fb_64_zps9e099311.png" width="8%" style="margin-right: 1em;" />
 		</a>	
+<!-- LinkedIn -->
 		<a href="https://www.linkedin.com/" target="_blank" style="text-decoration: none;" >
 			<img src="http://i842.photobucket.com/albums/zz344/VyralMarketing/Linkedin_64_zpse9c71241.png" alt="Connect with us on LinkedIn" width="8%" style="margin-right: 1em;"/>
 		</a>
+<!-- Google Plus -->
 		<a href="http://plus.google.com/" target="_blank"  style="text-decoration: none;">
 			<img src="http://i842.photobucket.com/albums/zz344/VyralMarketing/plus_64_zpscef6f466.png" alt="Follow us on Google Plus" width="8%" style="margin-right: 1em;"/>
 		</a>
+<!-- Youtube -->
 		<a href="http://www.youtube.com/" target="_blank" style="text-decoration: none;">
 			<img src="http://i842.photobucket.com/albums/zz344/VyralMarketing/youtube_64_zpsabd17045.png" alt="Check out our Youtube Channel" width="8%" style="margin-right: 1em;"/>
         </a>
+ <!-- Twitter -->       
         <a href="https://twitter.com/" target="_blank" style="text-decoration: none;">
 			<img src="http://i842.photobucket.com/albums/zz344/VyralMarketing/Twitter_64_zpsa8629156.jpg" alt="Follow us on Twitter" width="8%" style="margin-right: 1em;"/>
 		</a>
+<!-- blog -->		
 		<a href="http://www.eastbayrealestatejournal.net/" target="_blank" style="text-decoration: none;">
 			<img src="http://i842.photobucket.com/albums/zz344/VyralMarketing/1-1-2013/icon_blogger_zps3be29b7e.jpg" alt="Check out our video blog" width="8%"  style="margin-right: 1em;"/>
 		</a>
