added client class name

--- a/Index.html
+++ b/Index.html
@@ -25,7 +25,7 @@
 	<tr>
 		<td style="text-align: center;">
 		<!--Headline-->	
-			<h1 style="font-family: Arial, Helvetica, sans-serif; font-size: 1.6em; color: #404040; padding: 1em;" class="headline">Answering the Common Questions About Solar Panels</h1>
+			<h1 style="font-family: Arial, Helvetica, sans-serif; font-size: 1.6em; color: #404040; padding: 1em;" class="headline" id="title">Answering the Common Questions About Solar Panels</h1>
 		</td>
 
 	</tr>
@@ -134,7 +134,7 @@
    <tr>
    	<td width="100%" style="text-align: center; font-size: 0.8em;">
 <!-- Contact Info -->
-   		<p style="padding: 1.5em;">The Scott Fuller Team | Keller Williams Realty | DRE#01334119 | <br>
+   		<p style="padding: 1.5em;"><span id="client-name">The Scott Fuller Team</span> | Keller Williams Realty | DRE#01334119 | <br>
           760 Camino Ramon, Ste. 200 Danville, CA 94526<br>
           925-855-3432 | <a href="mailto:scott@thescottfullerteam.com">scott@thescottfullerteam.com</a></p>
    	</td>
