--- a/Index.html
+++ b/Index.html
@@ -3,132 +3,110 @@
 <body bgcolor="#ccc" style="font-family: Helvetica, Arial, sans-serif; background-color: #f6f6f6;" width="100%">
 
 
-<!--Preheader goes here-->
-<p style="color: transparent; display: none;">You don't want to buy a home to find out later it has a bad roof or a termite problem.</p>
-<table style="width:100%; max-width: 630;" class="container" align="center" cellpadding="0" cellspacing="0">
-	<tr>
-		<td>
-			<table align="center">
-				<tr>
-					<td class="Logo" width="630px;">
-               <!--Email Header goes here. remember to fill out the alt text-->				
-						<img alt="Colorado Springs Real Estate Video Blog with Tifany Lachnidt" src="https://829875b897-custmedia.vresp.com/c1eef94060/holliday_email.jpg" style="width: 100.963%; float: left;">		
-					</td>
-				</tr>
-			</table>
-		</td>
-	</tr>
+
+<body bgcolor="#ccc" style="font-family: Helvetica, Arial, sans-serif; background-color: #efefef;" width="100%"></body>
+<!-- Preheader goes here-->
+<p style="color: transparent; display: none;">preheader text</p>
+<table style="width:100%; max-width: 635px;" align="center" cellpadding="0" cellspacing="0" class="container">
+  <tr>
+    <td>
+      <table align="center">
+        <tr>
+          <td width="630px;" class="Logo">
+            <!-- Email Header goes here. remember to fill out the alt text--><img alt="Greensboro Real Estate Video Blog with undefined" src="https://972d692809-custmedia.vresp.com/032acd4ad4/Hatch_blog.jpg" style="width: 100%; float: left;"/>
+          </td>
+        </tr>
+      </table>
+    </td>
+  </tr>
 </table>
-<table style="width:100%; max-width: 630px;" bgcolor="#fcfcfc" style="border: 2px solid #dddddd; line-height: 135%;" class="container" align="center" cellpadding="0" cellspacing="0">
-	<tr>
-		<td style="text-align: center;">
-		<!--Headline-->	
-			<h1 style="font-family: Arial, Helvetica, sans-serif; font-size: 1.6em; color: #404040; padding: 0.3em;" class="headline" id="title">Five Mistakes to Avoid When You Buy a Home</h1>
-		</td>
-	</tr>
-	<tr>
-	<td style="text-align: center;"><p style="margin-top: 0em; font-family: helvetica, arial, sans-serif;">Press Play to Watch</p></td>
-	</tr>
-	<tr>
-		<td bgcolor="#fcfcfc" colspan="3" align="center">
-
-<!-- Insert Video Thumbnail Here. remember to fill out the alt text -->
-		<a href="http://www.greensborohomesonline.com/blog/five-mistakes-avoid-when-you-buy-home/"><img  alt="click here to play our video" src="https://829875b897-custmedia.vresp.com/f20854f4a8/nick%20holliday%20screenshot%205.15%202.jpg" style="max-width: 630px; width: 100%;"></a> 
-		</td>
-	</tr>
-	<tr>
-		<td colspan="3" height="15">&nbsp;</td>
-	</tr>
-	<tr>
-		<td bgcolor="#fcfcfc" colspan="3" align="center">
-			<table>
-				<tr>    
-<!--Date and Location-->
-					<td>
-						<center>
-						<p style="font-family: Arial, Helvetica, sans-serif; font-weight: bold; color: #555555; font-size: 0.9em; padding: 0.3em;">04/27/2015 | Colorado Springs, CO</p>
-
-
-<!--Preview Text-->	<a href="http://www.greensborohomesonline.com/blog/five-mistakes-avoid-when-you-buy-home/ "><p>Watch this video to learn how to avoid other mistakes!</p></a>
-				
- <!--video link where the # is -->             
-              <p style="padding: 0.3em; font-family: helvetica, arial, sans-serif;"><a href="https://www.youtube.com/watch?v=ZPwJkntezO4">Watch on Your Mobile Device</a></p>
-					</center>
-					</td>
-					<td class="spacer">&nbsp;</td>
-				</tr>
-			</table>  
-		</td>
-	</tr>
-	<tr>
-		<td  align="center" class="CTA">
-			<table width="80%" align="center" style="border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;">
-			 <tr>                                    <!-- color  -->
-           <td style="text-align: center; background-color: #3B58A7;">
-           <!-- link -->
-             <a href="http://www.greensborohomevalue.com" style="color: white; text-decoration: none !important;">
-               <p style="padding: 1em; font-size: 1.1em; font-family: helvetica, arial, sans-serif;">Get an Instant Value of Your Greensboro Home Now!</p>
-             </a>
-           </td>
+<table style="width:100%; max-width: 630px;" bgcolor="white" align="center" cellpadding="0" cellspacing="0" class="container">
+  <tr>
+    <td style="text-align: center;">
+      <!-- Headline-->
+      <h1 id="title" style="font-family: Arial, Helvetica, sans-serif; font-size: 1.6em; color: #404040; padding: 0.3em;" class="headline">Headline</h1>
+    </td>
+  </tr>
+  <tr>
+    <td style="text-align: center;">
+      <p style="margin-top: 0em; font-family: helvetica, arial, sans-serif;">Press Play to Watch</p>
+    </td>
+  </tr>
+  <tr>
+    <td bgcolor="white" colspan="3" align="center">
+      <!-- Insert Video Thumbnail Here. remember to fill out the alt text--><a href="undefined"><img alt="click here to play our video" src="https://972d692809-custmedia.vresp.com/032acd4ad4/Erik-Hatch-PLAY.jpg" style="max-width: 630px; width: 100%;"/></a>
+    </td>
+  </tr>
+  <tr>
+    <td colspan="3" height="15"> </td>
+  </tr>
+  <tr>
+    <td bgcolor="#fcfcfc" colspan="3" align="center">
+      <table>
+        <tr>
+          <!-- Date and Location-->
+          <td>
+            <center>
+              <p style="font-family: Arial, Helvetica, sans-serif; font-weight: bold; font-size: 0.9em; padding: 0.3em;">04/27/2015 | Colorado Springs, CO</p>
+              <!-- Preview Text-->
+              <p style="padding: 0em 1em;">When it comes to selling your home, most Realtors practice the three P's. They put your home on the MLS, put a sign in the yard, and pray that it sells. In today's market, it takes much more than that to sell a home quickly and for top dollar. We advertise our listings all over the web to optimize the traffic that your home receives online.</p><a href="http://blogger.com">
+                <p>Watch this video to learn how to avoid other mistakes!</p></a>
+              <!-- video link where the # is-->
+              <p style="padding: 0.3em; font-family: helvetica, arial, sans-serif;"><a href="http://youtube.com">Watch on Your Mobile Device</a></p>
+            </center>
+          </td>
+          <td class="spacer"> </td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+  <tr>
+    <td align="center" class="CTA">
+      <table width="80%" align="center" style="border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;">
+        <tr>
+          <!-- color-->
+          <td style="text-align: center; background-color: #0000ff;">
+            <!-- link--><a href="http://home.com" style="color: white; text-decoration: none !important;">
+              <div style="padding: 1em; font-size: 1.1em; font-family: helvetica, arial, sans-serif;"> 
+                <p>Get an Instant Value of Your Greensboro Home Now!</p>
+              </div></a>
+          </td>
         </tr>
         <tr>
-          <td width="15" class="spacer">&nbsp;</td>
+          <td width="15" class="spacer"> </td>
         </tr>
-
-         <tr>
-                                                          <!-- color  -->
-           <td style="text-align: center; background-color: #323232;">
-           <!-- link -->
-             <a href="http://www.greensborohomesonline.com/search/advanced_search/" style="color: white; text-decoration: none !important;">
-               <p style="padding: 1em; font-size: 1.1em; font-family: helvetica, arial, sans-serif;">Search All Greensboro Homes on the MLS</p>
-             </a>
-           </td>
-         </tr>
-			</table>
-		</td>
-	</tr>
-   <tr align="center">
-     <td width="15" class="spacer"><span style="color: white;">--------------</span></td>
-    </tr>
+        <tr>
+          <!-- color-->
+          <td style="text-align: center; background-color: #323232;">
+            <!-- link--><a href="http://homesearchlink.com" style="color: white; text-decoration: none !important;">
+              <div style="padding: 1em; font-size: 1.1em; font-family: helvetica, arial, sans-serif;"> 
+                <p>Search All Greensboro Homes on the MLS</p>
+              </div></a>
+          </td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+  <tr align="center">
+    <td width="15" class="spacer"><span style="color: white;">--------------</span></td>
+  </tr>
   <tr align="center">
     <td width="80%">
-
-<!-- Socials-->
-
-<!--facebook-->
-     <a href="https://www.facebook.com/hollidaypropertygroup" target="_blank" alt="Join us on Facebook" style="text-decoration: none;">
-			<img src="http://i842.photobucket.com/albums/zz344/VyralMarketing/fb_64_zps9e099311.png" width="8%" style="margin-right: 1em;" />
-		</a>	
-
-<!-- Google Plus -->
-		<a href="https://plus.google.com/u/0/101151425553020406116/posts" target="_blank"  style="text-decoration: none;">
-			<img src="http://i842.photobucket.com/albums/zz344/VyralMarketing/plus_64_zpscef6f466.png" alt="Follow us on Google Plus" width="8%" style="margin-right: 1em;"/>
-		</a>
-<!-- Youtube -->
-		<a href="https://www.youtube.com/channel/UC4LyRdQ2wSyZfe2LbCo-irg" target="_blank" style="text-decoration: none;">
-			<img src="http://i842.photobucket.com/albums/zz344/VyralMarketing/youtube_64_zpsabd17045.png" alt="Check out our Youtube Channel" width="8%" style="margin-right: 1em;"/>
-        </a>
- <!-- Twitter -->       
-        <a href="https://twitter.com/TriadHomeValues" target="_blank" style="text-decoration: none;">
-			<img src="http://i842.photobucket.com/albums/zz344/VyralMarketing/Twitter_64_zpsa8629156.jpg" alt="Follow us on Twitter" width="8%" style="margin-right: 1em;"/>
-		</a>
+      <!-- Socials-->
+      <!-- facebook--><a href="http://facebook.com" target="_blank" alt="Join us on Facebook" style="text-decoration: none;"><img src="http://i842.photobucket.com/albums/zz344/VyralMarketing/fb_64_zps9e099311.png" width="8%" style="margin-right: 1em;"/></a>
+      <!--LinkedIn--><a href="http://linkedin.com" target="_blank" alt="Join us on Facebook" style="text-decoration: none;"><img src="http://i842.photobucket.com/albums/zz344/VyralMarketing/Linkedin_64_zpse9c71241.png" width="8%" style="margin-right: 1em;"/></a>
+      <!-- Google Plus--><a href="http://plus.google.com" target="_blank" style="text-decoration: none;"><img src="http://i842.photobucket.com/albums/zz344/VyralMarketing/plus_64_zpscef6f466.png" alt="Follow us on Google Plus" width="8%" style="margin-right: 1em;"/></a>
+      <!-- Youtube--><a href="http://youtube.com" target="_blank" style="text-decoration: none;"><img src="http://i842.photobucket.com/albums/zz344/VyralMarketing/youtube_64_zpsabd17045.png" alt="Check out our Youtube Channel" width="8%" style="margin-right: 1em;"/></a>
+      <!-- Twitter--><a href="http://twitter.com" target="_blank" style="text-decoration: none;"><img src="http://i842.photobucket.com/albums/zz344/VyralMarketing/Twitter_64_zpsa8629156.jpg" alt="Follow us on Twitter" width="8%" style="margin-right: 1em;"/></a>
+      <!--Blogger--><a href="http://blogger.com" target="_blank" style="text-decoration: none;"><img src="http://i842.photobucket.com/albums/zz344/VyralMarketing/1-1-2013/icon_blogger_zps3be29b7e.jpg" alt="Check out our video blog" width="8%" style="margin-right: 1em;"/></a>
     </td>
-   </tr>
-   <tr>
-   	<td width="100%" style="text-align: center; font-size: 0.8em;">
-<!-- Contact Info -->
-   		<p style="padding: 1.5em; font-family: helvetica, arial, sans-serif;"><span id="client-name">Nick Holliday </span> | Holliday Group <br>
-         1501 Highwoods Blvd Suite 103 | Greensboro, NC 27410 <br>
-        <a href="tel:336-383-1319">336-383-1319</a> | <a href="mailto:nickholliday@kw.com">nickholliday@kw.com</a></p>
-   	</td>
-   </tr>
-    <!-- IGNORE ME 
-    <tr>
-       <td bgcolor="#999" style="font-size: 0.6em; text-align: center;">
-          <p style="line-height: 1; overflow: hidden; column: 1; padding-bottom: 0.8em; padding-top: 1em;">You subscribed to our newsletter through our website, by emailing us asking for extra information or sales materials, by subscribing to our news through a sister site, by attending one of our events, or perhaps just because you're a friend or connection of us. If you don't wish to receive these updates, please unsubscribe anytime, below:</p>
-          <p><a href="#">Unsubscribe</a></p><br>
-       </td>
-    </tr> -->
+  </tr>
+  <tr>
+    <td width="100%" style="text-align: center; font-size: 0.8em;">
+      <!-- Contact Info-->
+      <p style="padding: 1.5em; font-family: helvetica, arial, sans-serif;"><span id="client-name">Mojo Jojo</span> | keller williams<br/>1501 Highwoods Blvd Suite 103 | Greensboro, NC 27410 <br/><a href="tel:555-555-5555">555-555-5555</a><br/><a href="mailto:someone@email.com">someone@email.com</a></p>
+    </td>
+  </tr>
 </table>
 </body>
 </html>
